Restructure privacy pages and add multilingual support

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <p class="subheadline">We connect independent fashion brands to users worldwide. Be first.</p>
     
     <div class="cta-buttons">
+
+      <section class="email-signup">
+        <h2>Stay in the Loop</h2>
+        <p>Enter your email to get early access, vendor news, and exclusive updates.</p>
+        <form 
+          action="https://formspree.io/f/YOUR_FORM_ID" 
+          method="POST" 
+          class="email-form"
+        >
+          <input type="email" name="email" placeholder="Your email address" required />
+          <button type="submit">Notify Me</button>
+        </form>
+      </section>
+
       <a href="https://forms.gle/YOUR_SIGNUP_FORM" class="btn primary">Become a Vendor</a>
     </div>
 
