Add Terms of Service and fix privacy policy links for all languages

--- a/terms/en/terms.html
+++ b/terms/en/terms.html
@@ -58,7 +58,9 @@
     <section class="section">
       <h2 class="heading_1">5. User Content & Rights</h2>
       <p class="body_text">
-        Vendors retain rights to the content they upload but grant Kiyim a non-exclusive, royalty-free license to display it within the App. All user activity is governed by our <a href="https://kiyim.site/en/privacy.html" class="link">Privacy Policy</a>.
+        Vendors retain rights to the content they upload but grant Kiyim a non-exclusive, royalty-free license to display it within the App. All user activity is governed by our <a href="https://kiyim.site/privacy/en/index.html" class="link">Privacy Policy</a>
+
+
       </p>
     </section>
 
