--- a/terms/it/terms.html
+++ b/terms/it/terms.html
@@ -58,7 +58,8 @@
     <section class="section">
       <h2 class="heading_1">5. Contenuti degli Utenti e Diritti</h2>
       <p class="body_text">
-        I venditori mantengono i diritti sui contenuti caricati ma concedono a Kiyim una licenza non esclusiva e gratuita per mostrarli nell'App. Tutte le attività degli utenti sono soggette alla nostra <a href="https://kiyim.site/it/privacy.html" class="link">Informativa sulla Privacy</a>.
+        I venditori mantengono i diritti sui contenuti caricati ma concedono a Kiyim una licenza non esclusiva e gratuita per mostrarli nell'App. Tutte le attività degli utenti sono soggette alla nostra <a href="https://kiyim.site/privacy/it/index.html" class="link">Informativa sulla Privacy</a>.
+
       </p>
     </section>
 
