--- a/terms/uz/terms.html
+++ b/terms/uz/terms.html
@@ -58,7 +58,8 @@
     <section class="section">
       <h2 class="heading_1">5. Foydalanuvchi kontenti</h2>
       <p class="body_text">
-        Sotuvchilar yuklagan kontentning mualliflik huquqiga egadir, ammo Kiyim ilovasi ichida ko‘rsatish uchun bepul litsenziya beradi. Barcha faoliyat <a href="https://kiyim.site/uz/privacy.html" class="link">Maxfiylik Siyosati</a>ga asosan amalga oshiriladi.
+        Sotuvchilar yuklagan kontentning mualliflik huquqiga egadir, ammo Kiyim ilovasi ichida ko‘rsatish uchun bepul litsenziya beradi. Barcha faoliyat <a href="https://kiyim.site/privacy/uz/index.html" class="link">Maxfiylik Siyosati</a>
+        ga asosan amalga oshiriladi.
       </p>
     </section>
 
