--- a/terms/ru/terms.html
+++ b/terms/ru/terms.html
@@ -58,7 +58,8 @@
     <section class="section">
       <h2 class="heading_1">5. Пользовательский контент</h2>
       <p class="body_text">
-        Продавцы сохраняют права на загруженный контент, но предоставляют Kiyim неисключительную лицензию на его отображение в приложении. Вся активность регулируется нашей <a href="https://kiyim.site/ru/privacy.html" class="link">Политикой конфиденциальности</a>.
+        Продавцы сохраняют права на загруженный контент, но предоставляют Kiyim неисключительную лицензию на его отображение в приложении. Вся активность регулируется нашей <a href="https://kiyim.site/privacy/ru/index.html" class="link">Политикой конфиденциальности</a>.
+
       </p>
     </section>
 
