--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <footer class="footer">
     <a href="/privacy/en/index.html">Privacy Policy</a> | 
-    <a href="mailto:khasankhabibullaev@gmail.com">Contact</a>
+    <a href="/contact/en/contact.html">Contact</a>
   </footer>
 </body>
 </html>
