Update contact pages and fix navigation links

--- a/contact/en/contact.html
+++ b/contact/en/contact.html
@@ -35,7 +35,7 @@
 
   <footer>
     <p>
-      <a href="index.html">Home</a> |
+      <a href="../../index.html">Home</a> |
       <a href="https://kiyim.site/privacy/en/index.html">Privacy Policy</a> |
       <a href="https://kiyim.site/terms/en/terms.html">Terms of Service</a>
     </p>
