--- a/contact/it/contact.html
+++ b/contact/it/contact.html
@@ -24,6 +24,7 @@
   <footer>
     <p>&copy; 2025 Kiyim. Tutti i diritti riservati.</p>
     <p>
+      <a href="../../index.html">Home</a> |
       <a href="/privacy/it/index.html">Informativa sulla privacy</a> |
       <a href="/terms/it/terms.html">Termini di servizio</a>
     </p>
