--- a/contact/ru/contact.html
+++ b/contact/ru/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kiyim - Contatti</title>
+  <title>Kiyim - Контакты</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -12,20 +12,21 @@
   </header>
 
   <section class="hero">
-    <h1>Contattaci</h1>
-    <p>Puoi contattarci utilizzando le seguenti informazioni:</p>
+    <h1>Связаться с нами</h1>
+    <p>Вы можете связаться с нами, используя следующую информацию:</p>
     <div class="email-signup">
-      <p><strong>Email:</strong> <a href="mailto:khasankhabibullaev@gmail.com">khasankhabibullaev@gmail.com</a></p>
-      <p><strong>Telefono:</strong> +393477139445</p>
-      <p><strong>Indirizzo:</strong> via Montebello, Firenze, Italia</p>
+      <p><strong>Электронная почта:</strong> <a href="mailto:khasankhabibullaev@gmail.com">khasankhabibullaev@gmail.com</a></p>
+      <p><strong>Телефон:</strong> +393477139445</p>
+      <p><strong>Адрес:</strong> via Montebello, Флоренция, Италия</p>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Kiyim. Tutti i diritti riservati.</p>
+    <p>&copy; 2025 Kiyim. Все права защищены.</p>
     <p>
-      <a href="/privacy/it/index.html">Informativa sulla privacy</a> |
-      <a href="/terms/it/terms.html">Termini di servizio</a>
+      <a href="../../index.html">Главная</a> |
+      <a href="/privacy/ru/index.html">Политика конфиденциальности</a> |
+      <a href="/terms/ru/terms.html">Условия использования</a>
     </p>
   </footer>
 </body>
