--- a/contact/uz/contact.html
+++ b/contact/uz/contact.html
@@ -24,8 +24,9 @@
   <footer>
     <p>&copy; 2025 Kiyim. Barcha huquqlar himoyalangan.</p>
     <p>
-      <a href="/privacy/en/index.html">Maxfiylik siyosati</a> |
-      <a href="/terms/en/terms.html">Foydalanish shartlari</a>
+      <a href="../../index.html">Bosh sahifa</a> |
+      <a href="/privacy/uz/index.html">Maxfiylik siyosati</a> |
+      <a href="/terms/uz/terms.html">Foydalanish shartlari</a>
     </p>
   </footer>
 </body>
