Update landing page footer links and restore static privacy/contact URLs

--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="#" onclick="showPrivacy()">Privacy Policy</a> |
-        <a href="#" onclick="showContact()">Contact</a>
+        <a href="/privacy/en/index.html" target="_blank">Privacy Policy</a> |
+        <a href="/contact/en/contact.html" target="_blank">Contact</a>
       </div>
     </footer>
   </div>
