Update Italian and English vendor registration forms, logo, and index page

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         langCode = 'it';
       }
       
-      window.location.href = `vendor registration/${langCode}/form.html`;
+      <a href="#" class="btn primary" onclick="handleVendorSignup()">Become a Vendor</a>;
     }
 
     // Handle privacy policy
