--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         <nav class="main-nav">
           <ul>
             <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="about us/en/about.html">About</a></li>
             <li><a href="#support">Support</a></li>
           </ul>
         </nav>
