--- a/about us/en/about.html
+++ b/about us/en/about.html
@@ -405,7 +405,7 @@
     <header class="header">
       <div class="container">
         <a href="../index.html" class="logo-link">
-          <img src="../logo.png" alt="Kiyim Logo" class="logo">
+          <img src="../../logo.png" alt="Kiyim Logo" class="logo">
         </a>
 
         <nav class="main-nav">
@@ -420,7 +420,7 @@
 
     <main class="about-section">
       <div class="container">
-        <a href="../index.html" class="back-button">
+        <a href="../../index.html" class="back-button">
           <svg viewBox="0 0 24 24" fill="currentColor">
             <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
           </svg>
