--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
       list-style: none;
       display: flex;
       gap: 30px; /* Space between navigation items */
+      align-items: center; /* Align items vertically in the nav */
     }
 
-    .main-nav a {
+    .main-nav a:not(.btn-header) { /* Apply to regular nav links */
       color: #666666;
       text-decoration: none;
       font-weight: 500;
@@ -101,7 +102,7 @@
       padding: 5px 0; /* Add padding for a better hover area */
     }
 
-    .main-nav a::after {
+    .main-nav a:not(.btn-header)::after { /* Apply to regular nav links */
       content: '';
       position: absolute;
       bottom: 0;
@@ -112,12 +113,12 @@
       transition: width 0.3s ease;
     }
 
-    .main-nav a:hover {
+    .main-nav a:not(.btn-header):hover { /* Apply to regular nav links */
       color: #ffffff;
       transform: translateY(-2px);
     }
 
-    .main-nav a:hover::after {
+    .main-nav a:not(.btn-header):hover::after { /* Apply to regular nav links */
       width: 100%;
     }
 
@@ -264,11 +265,8 @@
       transform: translateY(0);
     }
 
-    /* CTA Buttons */
-    .cta-buttons {
-      margin-bottom: 80px;
-      animation: slideUp 0.8s ease-out 0.6s both;
-    }
+    /* CTA Buttons (only for general button styling, not for the moved button's container) */
+    /* The original .cta-buttons div is now removed from the main content */
 
     .btn {
       display: inline-block;
@@ -308,6 +306,44 @@
       transform: translateY(-3px);
       box-shadow: 0 10px 30px rgba(255, 255, 255, 0.3);
     }
+
+    /* New styles for the header button */
+    .btn-header {
+        /* Adapts the primary button style for the header */
+        padding: 10px 20px; /* Smaller padding for better fit in header */
+        font-size: 0.95rem; /* Slightly smaller font */
+        border-radius: 8px; /* Slightly smaller border-radius */
+        background: linear-gradient(135deg, #ffffff 0%, #cccccc 100%);
+        color: #000000;
+        text-decoration: none;
+        font-weight: 600;
+        transition: all 0.3s ease;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        white-space: nowrap; /* Prevent text wrapping */
+    }
+
+    .btn-header::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+        transition: left 0.5s;
+    }
+
+    .btn-header:hover::before {
+        left: 100%;
+    }
+
+    .btn-header:hover {
+        transform: translateY(-2px); /* Slight lift on hover */
+        box-shadow: 0 6px 20px rgba(255, 255, 255, 0.2);
+    }
+
 
     /* QR Section */
     .qr-section {
@@ -434,6 +470,13 @@
           flex-wrap: wrap; /* Allow nav items to wrap if screen is very small */
       }
 
+      /* Adjust header button for mobile */
+      .main-nav .btn-header {
+          margin-top: 10px; /* Add some space above the button when stacked */
+          font-size: 1rem;
+          padding: 12px 25px;
+      }
+
       .hero {
         padding: 60px 20px;
       }
@@ -519,6 +562,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="about us/en/about.html">About</a></li>
             <li><a href="#support">Support</a></li>
+            <li><a href="#" class="btn-header" onclick="handleVendorSignup()">Become a Vendor</a></li>
           </ul>
         </nav>
       </div>
@@ -537,10 +581,6 @@
             <button type="submit">Notify Me</button>
           </form>
         </section>
-
-        <div class="cta-buttons">
-          <a href="#" class="btn primary" onclick="handleVendorSignup()">Become a Vendor</a>
-        </div>
 
         <div class="qr-section">
           <h2>Download the App</h2>
@@ -590,7 +630,7 @@
           <a href="privacy/en/index.html" target="_blank">Privacy Policy</a> |
           <a href="contact/en/contact.html" target="_blank">Contact</a>
         </div>
-        <p>&copy; 2025 Kiyim. All rights reserved.</p>
+        <p>© 2025 Kiyim. All rights reserved.</p>
       </div>
     </footer>
   </div>
