--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       align-items: center; /* Align items vertically in the nav */
     }
 
-    .main-nav a:not(.btn-header) { /* Apply to regular nav links */
+    .main-nav a { /* Apply to all nav links */
       color: #666666;
       text-decoration: none;
       font-weight: 500;
@@ -102,7 +102,7 @@
       padding: 5px 0; /* Add padding for a better hover area */
     }
 
-    .main-nav a:not(.btn-header)::after { /* Apply to regular nav links */
+    .main-nav a::after { /* Apply to all nav links */
       content: '';
       position: absolute;
       bottom: 0;
@@ -113,12 +113,12 @@
       transition: width 0.3s ease;
     }
 
-    .main-nav a:not(.btn-header):hover { /* Apply to regular nav links */
+    .main-nav a:hover { /* Apply to all nav links */
       color: #ffffff;
       transform: translateY(-2px);
     }
 
-    .main-nav a:not(.btn-header):hover::after { /* Apply to regular nav links */
+    .main-nav a:hover::after { /* Apply to all nav links */
       width: 100%;
     }
 
@@ -265,9 +265,7 @@
       transform: translateY(0);
     }
 
-    /* CTA Buttons (only for general button styling, not for the moved button's container) */
-    /* The original .cta-buttons div is now removed from the main content */
-
+    /* Original .btn classes are no longer used for the vendor link in header */
     .btn {
       display: inline-block;
       padding: 18px 36px;
@@ -306,44 +304,6 @@
       transform: translateY(-3px);
       box-shadow: 0 10px 30px rgba(255, 255, 255, 0.3);
     }
-
-    /* New styles for the header button */
-    .btn-header {
-        /* Adapts the primary button style for the header */
-        padding: 10px 20px; /* Smaller padding for better fit in header */
-        font-size: 0.95rem; /* Slightly smaller font */
-        border-radius: 8px; /* Slightly smaller border-radius */
-        background: linear-gradient(135deg, #ffffff 0%, #cccccc 100%);
-        color: #000000;
-        text-decoration: none;
-        font-weight: 600;
-        transition: all 0.3s ease;
-        position: relative;
-        overflow: hidden;
-        cursor: pointer;
-        white-space: nowrap; /* Prevent text wrapping */
-    }
-
-    .btn-header::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
-        transition: left 0.5s;
-    }
-
-    .btn-header:hover::before {
-        left: 100%;
-    }
-
-    .btn-header:hover {
-        transform: translateY(-2px); /* Slight lift on hover */
-        box-shadow: 0 6px 20px rgba(255, 255, 255, 0.2);
-    }
-
 
     /* QR Section */
     .qr-section {
@@ -470,13 +430,6 @@
           flex-wrap: wrap; /* Allow nav items to wrap if screen is very small */
       }
 
-      /* Adjust header button for mobile */
-      .main-nav .btn-header {
-          margin-top: 10px; /* Add some space above the button when stacked */
-          font-size: 1rem;
-          padding: 12px 25px;
-      }
-
       .hero {
         padding: 60px 20px;
       }
@@ -562,7 +515,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="about us/en/about.html">About</a></li>
             <li><a href="#support">Support</a></li>
-            <li><a href="#" class="btn-header" onclick="handleVendorSignup()">Become a Vendor</a></li>
+            <li><a href="#" onclick="handleVendorSignup()">Become a Vendor</a></li>
           </ul>
         </nav>
       </div>
