--- a/index.html
+++ b/index.html
@@ -156,6 +156,90 @@
       transform: scale(1);
     }
 
+    /* Hamburger Menu */
+    .hamburger {
+        display: none; /* Hidden by default on desktop */
+        flex-direction: column;
+        justify-content: space-around;
+        width: 30px;
+        height: 25px;
+        cursor: pointer;
+        z-index: 1001; /* Above header content */
+    }
+
+    .hamburger .bar {
+        width: 100%;
+        height: 3px;
+        background-color: var(--primary-color);
+        transition: all 0.3s ease;
+        border-radius: 2px;
+    }
+
+    /* Side Drawer */
+    .side-drawer {
+        position: fixed;
+        top: 0;
+        right: -300px; /* Start off-screen */
+        width: 250px; /* Width of the drawer */
+        height: 100%;
+        background: var(--darker-bg);
+        border-left: 1px solid var(--glass-border-light);
+        box-shadow: -5px 0 15px rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        transition: right 0.3s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        padding-top: 80px; /* Space for fixed header/logo */
+    }
+
+    .side-drawer.open {
+        right: 0; /* Slide in */
+    }
+
+    .side-drawer ul {
+        list-style: none;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .side-drawer a {
+        color: var(--primary-color);
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 1.1rem;
+        display: block;
+        padding: 10px 15px;
+        border-radius: 8px;
+        transition: background 0.2s ease, color 0.2s ease;
+    }
+
+    .side-drawer a:hover {
+        background: rgba(255, 255, 255, 0.1);
+        color: var(--primary-color);
+    }
+
+    /* Overlay for when drawer is open */
+    .drawer-overlay {
+        display: none; /* Hidden by default */
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        z-index: 999;
+        backdrop-filter: blur(2px);
+        transition: opacity 0.3s ease-in-out;
+        opacity: 0;
+    }
+
+    .drawer-overlay.visible {
+        display: block;
+        opacity: 1;
+    }
+
     /* Hero Section with 3D Effects */
     .hero {
       min-height: 100vh;
@@ -468,8 +552,9 @@
     /* Mobile Responsive - Header & Navigation Fixes */
     @media (max-width: 768px) {
       .header .container {
-        flex-direction: column; /* Stack logo and nav vertically */
-        gap: 12px; /* Reduced gap between logo and nav */
+        flex-direction: row; /* Keep logo and hamburger on one row */
+        justify-content: space-between; /* Space out logo and hamburger */
+        align-items: center;
         padding: 10px 20px; /* Adjusted padding */
       }
 
@@ -477,44 +562,13 @@
         height: 32px; /* Significantly smaller logo on mobile */
       }
 
-      .main-nav ul {
-        gap: 15px; /* Consistent gap for mobile nav items */
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 0 10px; /* Add horizontal padding to nav list */
+      .main-nav {
+        display: none; /* Hide desktop nav on mobile */
       }
 
-      .main-nav a {
-        font-size: 0.95rem; /* Slightly smaller font for mobile nav */
-        padding: 6px 12px; /* Smaller padding for nav links */
-        /* Revert 'Become a Vendor' to a normal link style on mobile */
-        background: transparent; /* Ensure no background on mobile links */
-        border-radius: 0; /* Remove border-radius for cleaner text link */
-        color: var(--secondary-color); /* Consistent text color */
+      .hamburger {
+        display: flex; /* Show hamburger on mobile */
       }
-
-      /* Specific adjustment for 'Become a Vendor' if it was treated differently */
-      .main-nav a[onclick*="handleVendorSignup"]::before {
-        display: none; /* Hide the gradient pseudo-element on mobile for this link */
-      }
-      .main-nav a[onclick*="handleVendorSignup"]:hover {
-        color: var(--primary-color); /* Normal hover effect */
-        transform: none; /* No vertical transform on hover for simplicity */
-      }
-      .main-nav a[onclick*="handleVendorSignup"]::after {
-        content: ''; /* Ensure consistent underline if others have it */
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 0;
-        height: 1px; /* Thinner underline */
-        background: var(--primary-color);
-        transition: width 0.3s ease;
-      }
-      .main-nav a[onclick*="handleVendorSignup"]:hover::after {
-        width: 100%;
-      }
-
 
       .hero {
         padding: 100px 20px 60px; /* Adjusted padding */
@@ -645,8 +699,25 @@
             <li><a href="#" onclick="handleVendorSignup()">Become a Vendor</a></li>
           </ul>
         </nav>
+
+        <div class="hamburger" id="hamburger">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
       </div>
     </header>
+
+    <div class="side-drawer" id="sideDrawer">
+      <ul>
+        <li><a href="#services" class="drawer-link">Services</a></li>
+        <li><a href="about us/en/about.html" class="drawer-link">About</a></li>
+        <li><a href="#support" class="drawer-link">Support</a></li>
+        <li><a href="#" onclick="handleVendorSignup()" class="drawer-link">Become a Vendor</a></li>
+      </ul>
+    </div>
+
+    <div class="drawer-overlay" id="drawerOverlay"></div>
 
     <main class="hero">
       <div class="hero-content">
@@ -800,19 +871,40 @@
       }
     }
 
-    // Add smooth scroll behavior for anchor links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    // Add smooth scroll behavior for anchor links and close drawer
+    document.querySelectorAll('a[href^="#"], .drawer-link').forEach(anchor => {
       anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute('href'));
-        if (target) {
-          target.scrollIntoView({
-            behavior: 'smooth',
-            block: 'start'
-          });
+        // Only prevent default if it's an internal anchor link
+        if (this.getAttribute('href').startsWith('#')) {
+            e.preventDefault();
+            const target = document.querySelector(this.getAttribute('href'));
+            if (target) {
+                target.scrollIntoView({
+                    behavior: 'smooth',
+                    block: 'start'
+                });
+            }
+        }
+        // Close the drawer if it's open
+        if (document.getElementById('sideDrawer').classList.contains('open')) {
+            toggleDrawer();
         }
       });
     });
+
+    // Drawer Menu Functionality
+    const hamburger = document.getElementById('hamburger');
+    const sideDrawer = document.getElementById('sideDrawer');
+    const drawerOverlay = document.getElementById('drawerOverlay');
+
+    function toggleDrawer() {
+        sideDrawer.classList.toggle('open');
+        drawerOverlay.classList.toggle('visible');
+        document.body.classList.toggle('no-scroll'); // Prevent scrolling body when drawer is open
+    }
+
+    hamburger.addEventListener('click', toggleDrawer);
+    drawerOverlay.addEventListener('click', toggleDrawer); // Close drawer when clicking overlay
 
     // Initialize particles when page loads
     window.addEventListener('load', () => {
