--- a/index.html
+++ b/index.html
@@ -496,7 +496,9 @@
     }
 
     .social-link {
-      display: block;
+      display: flex; /* Changed to flex */
+      align-items: center; /* Vertically center the icon */
+      justify-content: center; /* Horizontally center the icon */
       color: var(--secondary-color); /* Subtle color for icons */
       transition: all 0.2s ease; /* Faster transition */
       padding: 12px; /* Reduced padding */
