Switch Notify Me form to FormSubmit and update button to Sign Up

--- a/index.html
+++ b/index.html
@@ -728,10 +728,10 @@
         
         <section class="email-signup">
           <h2>Stay in the Loop</h2>
-          <p>Enter your email to get early access, vendor news, and exclusive updates.</p>
-          <form class="email-form" id="emailForm">
+          <p>Enter your email to register as a vendor, get early access, vendor news, and exclusive updates.</p>
+          <form class="email-form" action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
             <input type="email" name="email" placeholder="Your email address" required />
-            <button type="submit">Notify Me</button>
+            <button type="submit">Sign Up</button>
           </form>
         </section>
 
