Switch Notify Me form to FormSubmit and update button to Sign Up

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
         <section class="email-signup">
           <h2>Stay in the Loop</h2>
           <p>Enter your email to register as a vendor, get early access, vendor news, and exclusive updates.</p>
-          <form class="email-form" action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
+          <form class="email-form" action="https://formsubmit.co/info@kiyim.site" method="POST">
             <input type="email" name="email" placeholder="Your email address" required />
             <button type="submit">Sign Up</button>
           </form>
