--- a/index.html
+++ b/index.html
@@ -731,6 +731,7 @@
           <p>Enter your email to register as a vendor, get early access, vendor news, and exclusive updates.</p>
           <form class="email-form" action="https://formsubmit.co/info@kiyim.site" method="POST">
             <input type="email" name="email" placeholder="Your email address" required />
+            <input type="hidden" name="_redirect" value="https://kiyim.site/">
             <button type="submit">Sign Up</button>
           </form>
         </section>
