--- a/index.html
+++ b/index.html
@@ -727,8 +727,8 @@
         <p class="subheadline">We connect independent fashion brands, boutiques, and stores to users worldwide. Join the revolution.</p>
         
         <section class="email-signup">
-          <h2>Stay in the Loop</h2>
-          <p>Enter your email to register as a vendor, get early access, vendor news, and exclusive updates.</p>
+          <h2>Request to Register as a Vendor</h2>
+<p>Enter your email to request vendor registration and get early access to launch your boutique on Kiyim.</p>
           <form class="email-form" action="https://formsubmit.co/info@kiyim.site" method="POST">
             <input type="email" name="email" placeholder="Your email address" required />
             <input type="hidden" name="_redirect" value="https://kiyim.site/">
